--- a/web/home/displayResults.html
+++ b/web/home/displayResults.html
@@ -1,4 +1,4 @@
-<div ng-controller="menuController">
+<div ng-controller="homeController">
     <!--<h6>Display results</h6>-->
     <!--<div ng-repeat="res in listResultsVideo">
 
