--- a/web/menu/menu.html
+++ b/web/menu/menu.html
@@ -1,6 +1,6 @@
 <div ng-controller="menuController">
     <div id="navigation" >
-        <a ui-sref=".home">home</a>
+        <a ui-sref=".home.display">home</a>
         <a ui-sref=".profile">profile</a>
         <a ui-sref=".content">content</a>
         <input id="searchBarInput" type="text" ng-model="searchParams" placeholder="Type your research here" />
