--- a/web/home/home.html
+++ b/web/home/home.html
@@ -1,9 +1,9 @@
 <div id="homePage" ng-app="homeApp">
     <div id="menuHome">
         <ul>
-            <li>websites</li>
-            <li>videos</li>
-            <li>social networks</li>
+            <li><a ui-sref=".displayResultsWebsites" ui-sref-active="active">websites</a></li>
+            <li><a ui-sref=".display" ui-sref-active="active">videos</a></li>
+            <li><a ui-sref=".displayResultsSocialNetworks" ui-sref-active="active">social networks</a></li>
         </ul>
     </div>
     <div id="filterHome">
