SEARCH content OK for all
WORK in progress
State handling in menuController
 Ajout de $broadcast dans menuController et $on dans homeController (search is handled in homeController for now on)
 TypedQuery != Query in DAO
in <iframe> the field src is xss protected, so $sce.trustAsRessourceUrl is needed (filter)

BUGS: Control on input field of Profile page
the css error style is not render AT ALL when using error message

To Do - DAO + WebService for content page:
Erase values from input fields once inserted in database (coded but don't work)
need to add Read Update Delete and Find All web services

LEARNT:
display search module:
State handling in menuController
 Ajout de $broadcast dans menuController et $on dans homeController (search is handled in homeController for now on)
 TypedQuery != Query in DAO
in <iframe> the field src is xss protected, so $sce.trustAsRessourceUrl is needed (filter)

--- a/web/home/displayResultsSocialNetworks.html
+++ b/web/home/displayResultsSocialNetworks.html
@@ -1,10 +1,13 @@
 <div ng-controller="homeController">
-    <table class="tableResultsVideo">
-        <tr ng-repeat="res in listResultsVideo">
-            <td>
-                <iframe width="200" height="113" src="{{res.shortLinkVideo | trustAsResourceUrl}}" frameborder="0"></iframe>
-            </td>
-            <td class="resultsInfoHome" style="padding-top: 50px">
+    <table class="tableResultsSocialNetwork">
+        <tr ng-repeat="res in listResultsSocialNetwork">
+            <td class="resultsInfoSocialNetwork" style="padding-top: 50px">
+                <table  class="tableResultsSocialNetwork1">
+                    <tr><td><label class="titleInfoSocialNetwork"><b>{{res.titleSocialNetwork}}</b></label></td></tr>
+                    <tr><td></td></tr>
+                    <tr><td><a class="linkInfoSocialNetwork" href="{{res.linkSocialNetwork}}">{{res.linkSocialNetwork}}</a></td></tr>
+                    <tr><td><span class="descriptionInfoSocialNetwork" >{{res.descriptionSocialNetwork}}</span></td></tr>
+                </table>
             </td>
         </tr>
     </table>
